# tidyup

./: .gitignore  README.md  pyproject.toml  tidy.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  pr-to-prod.yml  publish-to-pypi.yml  release.yml
.wolf/: anatomy.md  cerebrum.md  identity.md  token-ledger.json
docs/: release-checklist.md  release-notes.md
docs/specs/: 002-file-selection-safety.md
tests/: test_cli_docs.py  test_filesystem_behavior.py  test_package.py  test_packaging.py  test_parser_contract.py  test_utils.py
tidyup/: __init__.py  __main__.py  tidyup.py  utils.py
