[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tidyup"
#version = "0.1.2"
dynamic = ["version"]
description = "Help keep your files and folders tidy by file type or date"
authors = [
    { name = "Esteban Valencia", email = "me@estebanvalencia.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9.1"
dependencies = ["setuptools_scm>=8.0.0"]
keywords = ["utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
maintainers = [
    { name = "Esteban Valencia", email = "me@estebanvalencia.com" }
]
[project.scripts]
tidyup = "tidyup.tidyup:main"

[tool.setuptools]
packages = ["tidyup"]

[tool.setuptools.package-data]
tidyup = ["examples/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
